--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/karmapa/tibetanDiffUI#readme",
   "dependencies": {
     "bootstrap-css": "3.0.0",
+    "diff": "2.2.2",
     "react": "15.0.1",
     "react-bootstrap": "0.29.2",
     "react-dom": "15.0.1",
