--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "0.23.1",
     "eslint": "2.8.0",
     "eslint-loader": "1.3.0",
+    "eslint-plugin-react": "5.0.1",
     "file-loader": "0.8.5",
     "image-webpack-loader": "1.7.0",
     "react-hot-loader": "1.3.0",
