--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/karmapa/tibetanDiffUI#readme",
   "dependencies": {
     "bootstrap-css": "3.0.0",
+    "codemirror": "5.14.2",
     "diff": "2.2.2",
     "react": "15.0.1",
     "react-bootstrap": "0.29.2",
+    "react-codemirror": "0.2.6",
     "react-dom": "15.0.1",
     "react-redux": "4.4.5",
     "react-resizable-box": "1.2.0",
